safari overflow fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,7 @@ h1 {
     padding: 0;
     position: relative;
     box-sizing: border-box;
+    overflow: hidden;
     z-index: 1; /* needed for post__section */
 }
 
@@ -106,6 +107,8 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    -webkit-mask-image: -webkit-radial-gradient(white, black); /* safari overflow fix */
 }
 
 .comment__section--hidden {
